Use AC_CONFIG_MACRO_DIR (patch by Erik de Castro Lopo, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5189 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,6 +4,8 @@ SUBDIRS = tagmanager scintilla src plugins icons po doc
 
 AUTOMAKE_OPTIONS =	1.7
 
+ACLOCAL_AMFLAGS = -I m4
+
 WIN32_BUILD_FILES = \
 	geany_private.rc \
 	win32-config.h \
