Add dummy entry for "do" snippet for Haskell to explicitly avoid the default completion.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5203 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/snippets.conf
+++ b/data/snippets.conf
@@ -63,3 +63,6 @@ class=class %cursor%:\n\t""" Class doc """\n\t\n\tdef __init__ (self):\n\t\t""" 
 iferr=iferr%block_cursor%fix%block%
 monitor=monitor%block_cursor%handle%block%
 
+[Haskell]
+# prevent completion of "do"-while-loops in Haskell
+do=
