Improve Stash GUI example.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5252 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,7 +3,7 @@ DOCDIR = $(DESTDIR)$(docdir)
 IMAGE_FILES = images/*.png
 EXTRA_DIST = geany.html geany.css geany.txt geany.1 \
 	plugins.dox pluginsymbols.c pluginsignals.c \
-	stash-example.c \
+	stash-example.c stash-gui-example.c \
 	$(srcdir)/$(IMAGE_FILES)
 
 pdf: geany.txt
