Add Forth filetype (patch by Thomas Huth, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5266 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -37,6 +37,7 @@ Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.
 Tcl=*.tcl;*.tk;*.wish;
 CSS=*.css;
 Docbook=*.docbook;
+Forth=*.fs;*.fth;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
 XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
