Add Lisp filetype (patch by Mário Silva, thanks). Note: Lisp lexer was taken from Scintilla instead.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5286 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -43,6 +43,7 @@ XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;
 Diff=*.diff;*.patch;*.rej;
+Lisp=*.lisp;
 NSIS=*.nsi;*.nsh;
 Po=*.po;*.pot;
 LaTeX=*.tex;*.sty;*.idx;*.ltx;
