Add Erlang filetype (patch by Taylor Venable, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5308 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -16,6 +16,7 @@ CSS=*.css;
 D=*.d;*.di;
 Diff=*.diff;*.patch;*.rej;
 Docbook=*.docbook;
+Erlang=*.erl;
 F77=*.f;*.for;*.ftn;*.f77;
 Ferite=*.fe;
 Forth=*.fs;*.fth;
