Move HTML automatic <table> tag completion into a 'table' snippet so the user can decide when to use it (patch by Eugene Arshinov, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5320 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/snippets.conf
+++ b/data/snippets.conf
@@ -71,3 +71,6 @@ monitor=monitor%block_cursor%handle%block%
 [Haskell]
 # prevent completion of "do"-while-loops in Haskell
 do=
+
+[HTML]
+table=<table>\n\t<tr>\n\t\t<td>%cursor%</td>\n\t</tr>\n</table>
