Make Python use named styles for color scheme support - use alt.conf color scheme if you want the old colors. Add named style 'function'.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5339 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/colorschemes/alt.conf
+++ b/data/colorschemes/alt.conf
@@ -1,24 +1,21 @@
 # Set of styles like the Geany <= 0.19 Python/script defaults with gray comments.
 
 [named_styles]
-# style names to use in filetypes.* [styling] sections
-# use foreground;background;bold;italic
-# normally background should be left blank to use the "default" style
+# see filetypes.common for details
 
 default=0x000000;0xffffff
 comment=0x808080
 commentdoc=0x404000
 number=0x400080
-# keyword
 word=0x600080;;true
-# e.g. global types from a *.c.tags file
 word2=0x9f0200;;true
 string=0x008000
-preprocessor=0x007f7f
+preprocessor=0x808000
 operator=0x300080
-# unterminated string
 stringeol=0x000000;0xe0c0e0
-type=0x0000d0;;true
+# this is a bit dim, may want to change
+type=0x003030;;true
+function=0x000080
 
 
 
