Add install-data-only target to only install data/* to speed up testing.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5342 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/Makefile.am
+++ b/Makefile.am
@@ -57,7 +57,10 @@ DISTCLEANFILES = \
 uninstall-local:
 	rm -rf $(DESTDIR)$(pkgdatadir);
 
-install-data-local:
+install-data-local: install-data-only
+	@$(NORMAL_INSTALL)
+
+install-data-only:
 	@$(NORMAL_INSTALL)
 	$(mkinstalldirs) $(DESTDIR)$(pkgdatadir); \
 	$(INSTALL_DATA) $(srcdir)/COPYING $(DESTDIR)$(pkgdatadir)/GPL-2; \
