Rename word/word2 named styles to keyword/keyword2.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5384 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/colorschemes/alt.conf
+++ b/data/colorschemes/alt.conf
@@ -7,8 +7,8 @@ default=0x000000;0xffffff
 comment=0x808080
 commentdoc=0x404000
 number=0x400080
-word=0x600080;;true
-word2=0x9f0200;;true
+keyword=0x600080;;true
+keyword2=0x9f0200;;true
 string=0x008000
 preprocessor=0x808000
 operator=0x300080
