Add *.latex pattern.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5435 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -29,7 +29,7 @@ Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
 Java=*.java;*.jsp;
 Javascript=*.js;
-LaTeX=*.tex;*.sty;*.idx;*.ltx;
+LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;
 Lisp=*.lisp;
 Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
