Add README for Scintilla explaining keeping in sync with scintilla.org and using Scintilla.iface instead of manual header editing.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5499 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/scintilla/Makefile.am
+++ b/scintilla/Makefile.am
@@ -110,4 +110,4 @@ marshallers: scintilla-marshal.list
 	glib-genmarshal --prefix scintilla_marshal scintilla-marshal.list --header > scintilla-marshal.h
 	glib-genmarshal --prefix scintilla_marshal scintilla-marshal.list --body > scintilla-marshal.c
 
-EXTRA_DIST=scintilla-marshal.list scintilla-marshal.c scintilla-marshal.h License.txt
+EXTRA_DIST=scintilla-marshal.list scintilla-marshal.c scintilla-marshal.h License.txt README
