Add filetype Cobol (based on a patch by Seth Keiper).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5533 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -11,6 +11,7 @@ C=*.c;*.h;
 C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
+COBOL=*.cob;*.cpy;*.cbl;*.cobol;
 Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;
 CSS=*.css;
 D=*.d;*.di;
