Fix detecting Matlab and Txt2Tags extensions by default.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5541 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -34,7 +34,7 @@ LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;
 Lisp=*.lisp;
 Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
-Matlab=*.m;
+Matlab/Octave=*.m;
 NSIS=*.nsi;*.nsh;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
@@ -47,7 +47,7 @@ Ruby=*.rb;*.rhtml;*.ruby;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.bash;*.m4;
 SQL=*.sql;
 Tcl=*.tcl;*.tk;*.wish;
-txt2tags=*.t2t;
+Txt2tags=*.t2t;
 Vala=*.vala;*.vapi;
 Verilog=*.v;
 VHDL=*.vhd;*.vhdl;
