Move most of TagManager's I/O to MIO
Moved the parsers to MIO, which allows both in-memory and file parsing.


git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5555 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/configure.ac
+++ b/configure.ac
@@ -293,6 +293,7 @@ icons/48x48/Makefile
 icons/scalable/Makefile
 tagmanager/Makefile
 tagmanager/include/Makefile
+tagmanager/mio/Makefile
 scintilla/Makefile
 scintilla/include/Makefile
 src/Makefile
