--- a/tagmanager/mio/makefile.win32
+++ b/tagmanager/mio/makefile.win32
@@ -5,11 +5,9 @@ AR = ar
 RANLIB = ranlib
 PREFIX = C:\libs
 RM = del
--include ../localwin32.mk
+-include ../../localwin32.mk
 
-COMPLIB=tagmanager.a
-
-REGEX_DEFINES = -DHAVE_REGCOMP -DREGEX_MALLOC -DSTDC_HEADERS=1
+COMPLIB=mio.a
 
 GTK_INCLUDES= \
 	-I$(PREFIX)/include/gtk-2.0 \
@@ -22,7 +20,7 @@ GTK_INCLUDES= \
 	-I$(PREFIX)/include/gettext \
 	-I$(PREFIX)/include
 
-INCLUDEDIRS=-I include -I mio -I . $(GTK_INCLUDES)
+INCLUDEDIRS=-I include $(GTK_INCLUDES)
 
 CBASEFLAGS=-Wall -pipe -mms-bitfields -DPACKAGE=\"geany\" -DG_OS_WIN32 -Wno-missing-braces -Wno-char-subscripts $(INCLUDEDIRS)
 ifdef DEBUG
@@ -32,20 +30,14 @@ CFLAGS=-O2 $(CBASEFLAGS)
 endif
 
 .c.o:
-	$(CC) $(REGEX_DEFINES) $(CFLAGS) -w -c $<
+	$(CC) $(CFLAGS) -w -c $<
 
 all: $(COMPLIB)
 
 clean:
 	-$(RM) deps.mak *.o $(COMPLIB)
 
-$(COMPLIB): abc.o args.o c.o cobol.o fortran.o make.o conf.o pascal.o perl.o php.o diff.o vhdl.o verilog.o lua.o js.o \
-actionscript.o nsis.o \
-haskell.o haxe.o html.o python.o lregex.o rest.o sh.o ctags.o entry.o get.o keyword.o nestlevel.o \
-options.o \
-parse.o basic.o read.o sort.o strlist.o latex.o markdown.o matlab.o docbook.o tcl.o ruby.o asm.o sql.o txt2tags.o css.o \
-vstring.o regex.o tm_workspace.o tm_work_object.o tm_source_file.o tm_project.o tm_tag.o \
-tm_symbol.o tm_file_entry.o tm_tagmanager.o r.o
+$(COMPLIB): mio.o
 	$(AR) rc $@ $^
 	$(RANLIB) $@
 
