--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -34,6 +34,7 @@ LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;
 Lisp=*.lisp;
 Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
+Markdown=*.mdml;
 Matlab/Octave=*.m;
 NSIS=*.nsi;*.nsh;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
