Enable SplitWindow build on Windows again.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5638 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/plugins/makefile.win32
+++ b/plugins/makefile.win32
@@ -56,10 +56,9 @@ plugins: \
 		classbuilder.dll \
 		export.dll \
 		saveactions.dll \
+		splitwindow.dll \
 		filebrowser.dll
 
-# Split Window is broken on Windows
-#		splitwindow.dll
 
 clean:
 	-$(RM) deps.mak *.o *.dll
