Revert r5638 "Enable SplitWindow build on Windows again."
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5639 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -50,8 +50,9 @@ all-local: \
 	htmlchars.dll \
 	export.dll \
 	saveactions.dll \
-	splitwindow.dll \
 	filebrowser.dll
+# Split Window is broken on Windows
+#	splitwindow.dll
 
 .c.dll:
 	$(CC) $(MINGW_CFLAGS) -o $@.o -c $<
