Add Scintilla's version.txt file.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5683 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/scintilla/Makefile.am
+++ b/scintilla/Makefile.am
@@ -126,4 +126,4 @@ marshallers: gtk/scintilla-marshal.list
 	glib-genmarshal --prefix scintilla_marshal gtk/scintilla-marshal.list --header > gtk/scintilla-marshal.h
 	glib-genmarshal --prefix scintilla_marshal gtk/scintilla-marshal.list --body > gtk/scintilla-marshal.c
 
-EXTRA_DIST=gtk/scintilla-marshal.list License.txt README
+EXTRA_DIST=gtk/scintilla-marshal.list License.txt README version.txt
