Highlight triple-quoted verbatims in Vala, Genie and Scala filtypes
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5698 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetypes.Genie.conf
+++ b/data/filetypes.Genie.conf
@@ -31,6 +31,9 @@ primary=abstract and array as assert async bool break byte case cast char class 
 # these are some doxygen keywords (incomplete)
 docComment=attention author brief bug class code date def enum example exception file fn namespace note param remarks return see since struct throw todo typedef var version warning union
 
+[lexer_properties]
+lexer.cpp.triplequoted.strings=1
+
 [settings]
 # Vala uses the C lexer
 lexer_filetype=C
