Make filetype groups configurable using [Groups] in filetype_extensions.conf. Read filetype_extensions.conf when calling filetypes_init_types(), don't require doclist initialization.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5740 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -56,3 +56,11 @@ VHDL=*.vhd;*.vhdl;
 XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;
 YAML=*.yaml;*.yml;
 None=*;
+
+# Note: restarting is required after editing groups
+[Groups]
+Compiled=Genie;Scala;
+Script=Typoscript;
+Markup=
+Misc=
+None=
