--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -60,7 +60,7 @@ None=*;
 # Note: restarting is required after editing groups
 [Groups]
 Compiled=Genie;Scala;
-Script=Typoscript;
+Script=
 Markup=
 Misc=
 None=
