Revert 'Compiled' filetype group back to 'Programming' (couldn't agree on whether e.g. Java is a compiled language).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5749 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -59,7 +59,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Compiled=Genie;Scala;
+Programming=Genie;Scala;
 Script=
 Markup=
 Misc=
