Read color scheme name and description for menu item label and tooltip (based on patch by Matthew Brush, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5751 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/colorschemes/alt.conf
+++ b/data/colorschemes/alt.conf
@@ -1,4 +1,6 @@
-# Set of styles like the Geany <= 0.19 Python/script defaults with gray comments.
+[theme_info]
+name=Alternate
+description=Alternate Geany color scheme with styles like the Geany <= 0.19 Python/script defaults with gray comments.
 
 [named_styles]
 # see filetypes.common for details
