Add Markdown extension.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5773 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -33,6 +33,7 @@ LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;
 Lisp=*.lisp;
 Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
+Markdown=*.mdml;
 Matlab=*.m;
 NSIS=*.nsi;*.nsh;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
