Add Cython filetype
Patch by Matthew Brush, thanks.

Also remove the Cython keywords from Python filetype.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5889 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -14,6 +14,7 @@ CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
 Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;
 CSS=*.css;
+Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
 Diff=*.diff;*.patch;*.rej;
 Docbook=*.docbook;
@@ -59,7 +60,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Genie;Scala;
+Programming=Cython;Genie;Scala;
 Script=
 Markup=
 Misc=
