Add Markdown extensions from Shared MIME-Info database
Closes #3405321.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5911 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -35,7 +35,7 @@ LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;
 Lisp=*.lisp;
 Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
-Markdown=*.mdml;
+Markdown=*.mdml;*.markdown;*.md;*.mkd;
 Matlab/Octave=*.m;
 NSIS=*.nsi;*.nsh;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
