Remove -wl,--export-dynamic from Makefile.am for Win32 since it's not needed and might not even work.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -98,7 +98,7 @@ AM_CFLAGS = -DGEANY_DATADIR=\"data\" \
 			-DGTK \
 			-DG_LOG_DOMAIN=\""Geany"\"
 
-geany_LDFLAGS =	-mwindows -mms-bitfields -Wl,--export-dynamic
+geany_LDFLAGS =	-mwindows -mms-bitfields
 
 WINDRES = $(host_alias)-windres
 
