--- a/src/makefile.win32
+++ b/src/makefile.win32
@@ -59,11 +59,9 @@ endif
 
 OBJS =	about.o build.o callbacks.o dialogs.o document.o editor.o encodings.o filetypes.o \
 		geanyentryaction.o geanymenubuttonaction.o geanyobject.o geanywraplabel.o highlighting.o \
-		interface.o keybindings.o keyfile.o \
-		log.o main.o msgwindow.o navqueue.o notebook.o plugins.o pluginutils.o \
-		prefs.o printing.o project.o \
-		sciwrappers.o search.o socket.o stash.o \
-		symbols.o templates.o toolbar.o tools.o sidebar.o \
+		keybindings.o keyfile.o log.o main.o msgwindow.o navqueue.o notebook.o \
+		plugins.o pluginutils.o prefs.o printing.o project.o sciwrappers.o search.o \
+		socket.o stash.o symbols.o templates.o toolbar.o tools.o sidebar.o \
 		ui_utils.o utils.o win32.o
 
 .c.o:
