Add doc/makefile.win32 for docs generation.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@6012 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -4,6 +4,7 @@ IMAGE_FILES = images/*.png
 EXTRA_DIST = geany.html geany.css geany.txt geany.1 \
 	plugins.dox pluginsymbols.c pluginsignals.c \
 	stash-example.c stash-gui-example.c \
+	makefile.win32 \
 	$(srcdir)/$(IMAGE_FILES)
 
 pdf: geany.txt
