Fix missing tagmanager/mio/makefile.win32 in EXTRA_DIST. Include makefile.win32 in EXTRA_DIST recursively, not at top-level.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@6013 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,10 +9,7 @@ ACLOCAL_AMFLAGS = -I m4
 WIN32_BUILD_FILES = \
 	geany_private.rc \
 	win32-config.h \
-	makefile.win32 \
-	scintilla/makefile.win32 \
-	tagmanager/makefile.win32 \
-	src/makefile.win32
+	makefile.win32
 
 SYS_DATA_FILES = \
 	data/c99.tags \
