Fix Autotools failure requiring README (oops)
Automake requires README to exist by default, but it was renamed to
README.rst recently.  Thus, change Automake strictness to `foreign'
for README to be optional, and distribute README.rst explicitly.

Although `foreign' strictness don't require any of the README, INSTALL,
COPYING, etc. files, it still includes them if available, so the
distribution still includes them.

--- a/Makefile.am
+++ b/Makefile.am
@@ -36,6 +36,7 @@ EXTRA_DIST = \
 	geany.gladep \
 	ChangeLog.pre-0-17 \
 	HACKING \
+	README.rst \
 	README.I18N \
 	README.Packagers \
 	po/intl_stats.sh \
