Revert adding reStructuredText extension to README
This reverts commits fbf77f586d65e319ecc1da11e98dcd932dd88b28 and
3816e40190c2f5331992f795f297669a399803fb.

While having the .rst extension helps GitHub formatting the file, the
renaming broke both Autotools and Waf build systems.

--- a/configure.ac
+++ b/configure.ac
@@ -6,7 +6,7 @@ AC_INIT([Geany], [1.22],
 AC_CONFIG_SRCDIR([src/geany.h])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([foreign])
+AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config.h])
 
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
