Make all filetypes.* files use named styles.
Fix colorschemes/alt.conf to use the new changes.

--- a/data/filetypes.conf
+++ b/data/filetypes.conf
@@ -1,12 +1,12 @@
 # For complete documentation of this file, please see Geany's main documentation
 [styling]
-# foreground;background;bold;italic
-default=0x7f0000;0xffffff;false;false
-comment=0x808080;0xffffff;false;false
-section=0x000090;0xffffff;true;false
-key=0x00007f;0xffffff;false;false
-assignment=0x000000;0xffffff;false;false
-defval=0x00007f;0xffffff;false;false
+# Edit these in the colorscheme .conf file intead
+default=value
+comment=comment
+section=tag
+key=attribute
+assignment=operator
+defval=value
 
 # the lexer doesn't support keywords
 
