--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 *.lo
 *.so
 *.dll
+*.exe
+deps.mak
 .deps/
 .libs/
 Makefile
@@ -35,11 +37,13 @@ Makefile.in
 /geany.gladep.bak
 /geany.pc
 /geany.spec
+/geany_private.res
 /global.tags.old
 /install-sh
 /intltool
 /intltool-*
 /libtool
+/localwin32.mk
 /.lock-wscript
 /ltmain.sh
 /m4/
