Fix a few style mappings

--- a/data/colorschemes/alt.conf
+++ b/data/colorschemes/alt.conf
@@ -66,7 +66,7 @@ string_3=default
 string_4=default
 string_eol=0x000000;0xe0c0e0
 character=string_1
-backtick=string_2
+backticks=string_2
 here_doc=string_2
 
 scalar=string_2
