Refactor highlighting setup

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,6 +21,7 @@ SRCS = \
 	geanyobject.c geanyobject.h \
 	geanywraplabel.c geanywraplabel.h \
 	highlighting.c highlighting.h \
+	highlightingmappings.h \
 	interface.c interface.h \
 	keybindings.c keybindings.h \
 	keyfile.c keyfile.h \
