Include gdk-pixbuf-2.0 path for recent GTK+ dev (Windows build)
Fixes #3396195.

Note: GTK+ 2.24 is the current maintained version of the developer
files bundle:
http://www.gtk.org/download/win32.php

--- a/scintilla/makefile.win32
+++ b/scintilla/makefile.win32
@@ -23,12 +23,13 @@ GTK_INCLUDES= \
 	-I$(PREFIX)/include/gtk-2.0 \
 	-I$(PREFIX)/lib/gtk-2.0/include \
 	-I$(PREFIX)/include/atk-1.0 \
-	-I$(PREFIX)/include/pango-1.0 \
 	-I$(PREFIX)/include/cairo \
+	-I$(PREFIX)/include/gdk-pixbuf-2.0 \
+	-I$(PREFIX)/include/pango-1.0 \
 	-I$(PREFIX)/include/glib-2.0 \
 	-I$(PREFIX)/lib/glib-2.0/include \
-	-I$(PREFIX)/include/gettext \
-	-I$(PREFIX)/include
+	-I$(PREFIX)/include \
+	-I$(PREFIX)/include/gettext
 
 
 vpath %.h gtk lexers lexlib src include
