Add .mm extension for Objective-C filetype

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -38,7 +38,7 @@ Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
 Markdown=*.mdml;*.markdown;*.md;*.mkd;
 Matlab/Octave=*.m;
 NSIS=*.nsi;*.nsh;
-Objective-C=*.m;*.h;
+Objective-C=*.m;*.mm;*.h;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
